demo/apidemo/sample/01-apidemo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: apidemo
  name: apidemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apidemo
  template:
    metadata:
      labels:
        app: apidemo
    spec:
      containers:
        - image: docker.io/yogendra/api-demo:latest
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
          name: apidemo
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            requests:
              memory: "720Mi"
              cpu: "500m"
            limits:
              memory: "2000Mi"
              cpu: "1000m"
---
