demo/apidemo/sample/02-apidemo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apidemo
spec:
  type: ClusterIP
  selector:
    app: apidemo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
